--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/morgan": "^1.9.9",
     "@types/node-persist": "^3.1.8",
     "@types/node-telegram-bot-api": "^0.64.7",
@@ -36,11 +37,13 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.9.2",
     "node-persist": "^4.0.3",
     "node-telegram-bot-api": "^0.66.0",
