--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "cross-env NODE_ENV=production nodemon",
     "start:dev": "cross-env NODE_ENV=development nodemon",
-    "build": "rimraf ./dist && tsc",
+    "build": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
