--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
       "src": "/(.*)",
       "dest": "dist/index.js"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "TS_NODE_DEV": "true"
+    },
+    "commands": ["tsc --project tsconfig.json"]
+  }
 }
