--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "cross-env NODE_ENV=production nodemon",
-    "start:dev": "cross-env NODE_ENV=development nodemon",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "prod": "cross-env NODE_ENV=production nodemon",
+    "clean": "rm -rf ./dist ./node_modules",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
