--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "src/index.ts"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "API_ID": "23346149",
+    "API_HASH": "069b31e286557eaaeb5d9c4371daa584",
+    "BOT_TOKEN": "7825300677:AAE2hpAE_DsEboFpXEkDnAi3_OFOOyMrfuI"
+  }
 }
