--- a/.gitignore
+++ b/.gitignore
@@ -69,11 +69,11 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
-.env.development
-.env.production
-.env.staging
+# .env
+# .env.test
+# .env.development
+# .env.production
+# .env.staging
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
