--- a/package.json
+++ b/package.json
@@ -36,19 +36,23 @@
     "typescript-eslint": "^8.18.2"
   },
   "dependencies": {
+    "@bull-board/api": "^6.7.8",
+    "@bull-board/express": "^6.7.8",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.41.3",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.5.0",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.9.2",
     "node-persist": "^4.0.3",
-    "node-telegram-bot-api": "^0.66.0",
+    "node-telegram-bot-api": "^0.63.0",
     "telegram": "^2.26.16"
   },
   "engines": {
