--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "build": "tsc",
     "dev": "cross-env NODE_ENV=development nodemon",
     "prod": "cross-env NODE_ENV=production nodemon",
